# Nabla-model-training

./: .gitignore  AGENTS.md  README.md  app.py  compare_metrics.py  convert_pkls_2_mp4_with_mano.py  convert_pkls_to_mp4.py  convert_pkls_to_objs.py  decode_word_tokens.py  demo_auto_reg.py  demo_infer.ipynb  output_inspector.py  pyproject.toml  render_video.py  requirements-v2.txt  requirements.txt  test.py  train.py  vis_mesh.py
configs/: deto-00-thai-test.yaml  deto-01-thai.yaml  deto-02-all-4-datasets.yaml  deto-03-finetune-thai-from-3-dataset.yaml  deto-04-thai-hand4wholepp.yaml  deto-thai.yaml  deto.yaml  soke-03-overfit-test-Thai.yaml  soke-04-from-scratch-Thai-New-Tokenizer.yaml  soke-05-all-4-datasets.yaml  soke-06-capped-4-datasets.yaml  soke-07-full-4-datasets-phase1.yaml  soke-08-thai-finetune-phase2.yaml  soke-09-from-scratch-Thai-With-Thai-KWS.yaml  soke-10-en-from-scratch-thai-hand4wholepp.yaml  soke-10-from-scratch-thai-hand4wholepp.yaml  soke-11-from-scratch-thai-hand4wholepp-withwords.yaml  soke-fine-tune-Thai.yaml  soke-from-scratch-CSL.yaml  soke-from-scratch-Thai-New-Tokenizer.yaml  soke-full-dataset.yaml  soke-overfit-test-Thai.yaml  soke.yaml
mGPT/: callback.py  config.py  inference.py
scripts/: 00_convert_smplerx_extracted.py  01_convert_pkls_folder_to_mp4.py  02_analyze_vqvae_reconstruction.py  compare_metrics.py  convert_pkls_folder_to_mp4.py  convert_pkls_to_mp4.py  convert_thai_data.py  extract_dataset_text.py  name2kws.thai.unicode.json  thai_motion_codes.json  thai_name2kws_test_smoothed_smplerx-wilor.json  train.thai.unicode.json  (+4 more)
(+18 files in other folders)
